RESOLVED FIXED242352
[iOS] "A problem repeatedly occurred" error page when safari resuming from background
https://bugs.webkit.org/show_bug.cgi?id=242352
Summary [iOS] "A problem repeatedly occurred" error page when safari resuming from ba...
Chris Dumez
Reported 2022-07-05 12:27:16 PDT
Follow-up to 252108@main to take care of more cases where we might try to reuse a terminated WebProcess during crash recovery.
Attachments
Chris Dumez
Comment 1 2022-07-05 12:31:13 PDT
EWS
Comment 2 2022-07-06 07:57:06 PDT
Committed 252177@main (5798b62eae7c): <https://commits.webkit.org/252177@main> Reviewed commits have been landed. Closing PR #2085 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-07-06 07:58:14 PDT
Note You need to log in before you can comment on or make changes to this bug.