[iOS] "A problem repeatedly occurred" error page when safari resuming from background https://bugs.webkit.org/show_bug.cgi?id=242352

Reviewed by Darin Adler.

Follow-up to 252108@main to take care of more cases where we might try to reuse a
terminated WebProcess during crash recovery, because we have not received the crash
notification for the back up process yet.

252108@main took care of processes reused from a related WKWebView. This patch takes
care of processes taken from the WebProcess cache or from a suspended page in the
back/forward list.

* Source/WebKit/UIProcess/SuspendedPageProxy.cpp:
(WebKit::SuspendedPageProxy::findReusableSuspendedPageProcess):
* Source/WebKit/UIProcess/WebProcessCache.cpp:
(WebKit::WebProcessCache::takeProcess):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:
(-[PSONNavigationDelegate webViewWebContentProcessDidTerminate:]):

Canonical link: https://commits.webkit.org/252177@main